--- a/mirror_images.yml
+++ b/mirror_images.yml
@@ -13,7 +13,7 @@
   tasks:
 
     - name: Check if oc binary is already installed
-      ansible.builtin.command: "oc version --client"
+      ansible.builtin.command: "{{ oc_install_dir }}oc version --client"
       register: oc_installed
       ignore_errors: true
 
@@ -24,11 +24,10 @@
       when: oc_installed.failed
 
     - name: Extract OpenShift client (oc) binary if not already installed
-      become: true
       ansible.builtin.unarchive:
         src: "/tmp/openshift-client-linux.tar.gz"
         dest: "{{ oc_install_dir }}"
-        remote_src: true
+        remote_src: false
         extra_opts: ["--strip-components=1"]
         creates: "{{ oc_install_dir }}/oc"
       when: oc_installed.failed
@@ -40,7 +39,7 @@
       when: oc_installed.failed
 
     - name: Verify oc installation
-      ansible.builtin.command: "oc version --client"
+      ansible.builtin.command: "{{ oc_install_dir }} oc version --client"
       register: oc_installed_version
       changed_when: false
 
